# devenv-python-dep-bug-reproducer

./: README.md  flake.nix
standalone-app/: pyproject.toml
standalone-app/standalone_app/: hello.py
